# kmboxetry

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  setup.sh  test_build.sh
.github/workflows/: appimage.yml  build_and_test.yml  get_bitsteam.yml  get_bitstream.yml  jekyll-gh-pages.yml  rust.yml
fpga/: Makefile  bitstream.bit  constraints.lpf  top.v
src/: build.rs  inject.rs  lib.rs  main.rs  usb.rs  util.rs  version.rs
src/backend/: build_and_flash.sh  cynthion_injector.rs  mouse_streamer.py
src/backend/fpga/: bitstream.bit
